# argocd-preprocessor

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yaml  release.yml
src/: app_project.rs  main.rs  processor.rs
