[package]
name = "bargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
glob = "0.3.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
serde_yaml = "0.9.17"
tempdir = "0.3.7"
tera = "1.17.1"
toml = "0.5.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
